--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,20 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<protobuf.version>3.24.0</protobuf.version>
+		<protobuf-plugin.version>0.6.1</protobuf-plugin.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protobuf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-protobuf-serializer</artifactId>
+			<version>7.5.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -50,13 +62,46 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+<build>
+<plugins>
+	<plugin>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-maven-plugin</artifactId>
+	</plugin>
 
+	<!-- Protobuf Maven Plugin -->
+	<plugin>
+		<groupId>org.xolstice.maven.plugins</groupId>
+		<artifactId>protobuf-maven-plugin</artifactId>
+		<version>${protobuf-plugin.version}</version>
+		<extensions>true</extensions>
+		<configuration>
+			<protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
+			<protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
+			<outputDirectory>${project.build.directory}/generated-sources/protobuf/java</outputDirectory>
+			<clearOutputDirectory>false</clearOutputDirectory>
+		</configuration>
+		<executions>
+			<execution>
+				<goals>
+					<goal>compile</goal>
+				</goals>
+			</execution>
+		</executions>
+	</plugin>
+</plugins>
+<extensions>
+	<extension>
+		<groupId>kr.motd.maven</groupId>
+		<artifactId>os-maven-plugin</artifactId>
+		<version>1.7.1</version>
+	</extension>
+</extensions>
+</build>
+	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 </project>
