--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.kafka.producer.value-serializer:org.springframework.kafka.support.seriali
 spring.kafka.producer.transaction-id-prefix: tx-
 spring.kafka.producer.properties.enable.idempotence: true
 spring.kafka.producer.properties.acks: all
+
+# Schema Registry Configuration
+spring.kafka.properties.schema.registry.url: http://localhost:8081
