--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.producer.transaction-id-prefix=tx-
 spring.kafka.producer.properties.enable.idempotence=true
 spring.kafka.producer.properties.acks= all
+
+#Streams
+spring.kafka.streams.application-id=user-message-count-app
+spring.kafka.streams.bootstrap-servers=localhost:9092
